- Fixed bug #53729 (DatePeriod fails to initialize recurrences on 64bit   big-endian systems). (Patch by rein@basefarm.no)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@307416 c90b9560-bf6c-de11-be94-00142212c4b1